--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" sizes="192x192" href="poker-game.png">
     <link rel="stylesheet" href="css/normolise.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Игра в пары</title>
